--- a/build.gradle
+++ b/build.gradle
@@ -52,14 +52,6 @@ spotless {
   }
 }
 
-gradle.projectsEvaluated {
-  tasks.withType(Test) {
-    filter {
-      setFailOnNoMatchingTests(false)
-    }
-  }
-}
-
 ext {
   gradleVersion = versions.gradle
   minJavaVersion = "8"
@@ -119,6 +111,14 @@ ext {
 }
 
 allprojects {
+
+  // This makes sure that any test tasks for subprojects don't
+  // fail in case the test filter does not match.
+  tasks.withType(Test) {
+    filter {
+      setFailOnNoMatchingTests(false)
+    }
+  }
 
   repositories {
     mavenCentral()
